--- a/index.html
+++ b/index.html
@@ -29,66 +29,66 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Photo Grid -->
   <div class="w3-row" id="warp004">
     <div class="w3-half">
-      <img src="/bw004/spread1.jpg" style="width:100%">
+      <img src="bw004/spread1.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw004/spread2.jpg" style="width:100%">
+      <img src="bw004/spread2.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row">	
     <div class="w3-half">
-      <img src="/bw004/spread3.jpg" style="width:100%">
+      <img src="bw004/spread3.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw004/spread4.jpg" style="width:100%">
+      <img src="bw004/spread4.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row" id="warp003">
     <div class="w3-half">
-      <img src="/bw003/spread1.jpg" style="width:100%">
+      <img src="bw003/spread1.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw003/spread2.jpg" style="width:100%">
+      <img src="bw003/spread2.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row">	
     <div class="w3-half">
-      <img src="/bw003/spread3.jpg" style="width:100%">
+      <img src="bw003/spread3.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw003/spread4.jpg" style="width:100%">
+      <img src="bw003/spread4.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row" id="warp002">
     <div class="w3-half">
-      <img src="/bw002/spread1.jpg" style="width:100%">
+      <img src="bw002/spread1.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw002/spread2.jpg" style="width:100%">
+      <img src="bw002/spread2.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row">	
     <div class="w3-half">
-      <img src="/bw002/spread3.jpg" style="width:100%">
+      <img src="bw002/spread3.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw002/spread4.jpg" style="width:100%">
+      <img src="bw002/spread4.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row" id="warp001">
     <div class="w3-half">
-      <img src="/bw001/spread1.jpg" style="width:100%">
+      <img src="bw001/spread1.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw001/spread2.jpg" style="width:100%">
+      <img src="bw001/spread2.jpg" style="width:100%">
     </div>
   </div>
   <div class="w3-row">	
     <div class="w3-half">
-      <img src="/bw001/spread3.jpg" style="width:100%">
+      <img src="bw001/spread3.jpg" style="width:100%">
     </div>
     <div class="w3-half">
-      <img src="/bw001/spread4.jpg" style="width:100%">
+      <img src="bw001/spread4.jpg" style="width:100%">
     </div>
   </div>
   
