--- a/index.html
+++ b/index.html
@@ -19,78 +19,54 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <div class="w3-row"><a href="#" class="w3-left w3-button w3-white">BREADWARP ZINE ARCHIVE</a></div>
-    <div class="w3-row"><span class="w3-left w3-button w3-white">jump to ...</span> 
+  </header>
+    <div class="w3-row"><span class="w3-left w3-white">jump to ...</span> 
     <a href="#warp001" class="w3-left w3-button w3-white">[1]</a>
     <a href="#warp002" class="w3-left w3-button w3-white">[2]</a>
     <a href="#warp003" class="w3-left w3-button w3-white">[3]</a>
     <a href="#warp004" class="w3-left w3-button w3-white">[4]</a></div>
-  </header>
 
   <!-- Photo Grid -->
   <div class="w3-row" id="warp004">
-    <div class="w3-half">
-      <img src="bw004/spread1.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw004/spread2.jpg" style="width:100%">
-    </div>
+    <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 4 </span>
+    <a href="bw004/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
   </div>
   <div class="w3-row">	
-    <div class="w3-half">
-      <img src="bw004/spread3.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw004/spread4.jpg" style="width:100%">
-    </div>
+    <div class="w3-third"><img src="bw004/spread2.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw004/spread3.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw004/spread4.jpg" style="width:100%"></div>
   </div>
+
   <div class="w3-row" id="warp003">
-    <div class="w3-half">
-      <img src="bw003/spread1.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw003/spread2.jpg" style="width:100%">
-    </div>
+    <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 3 </span>
+    <a href="bw003/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
   </div>
   <div class="w3-row">	
-    <div class="w3-half">
-      <img src="bw003/spread3.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw003/spread4.jpg" style="width:100%">
-    </div>
+    <div class="w3-third"><img src="bw003/spread2.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw003/spread3.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw003/spread4.jpg" style="width:100%"></div>
   </div>
-  <div class="w3-row" id="warp002">
-    <div class="w3-half">
-      <img src="bw002/spread1.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw002/spread2.jpg" style="width:100%">
-    </div>
+
+  <div class="w3-row" id="warp004">
+    <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 2 </span>
+    <a href="bw002/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
   </div>
   <div class="w3-row">	
-    <div class="w3-half">
-      <img src="bw002/spread3.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw002/spread4.jpg" style="width:100%">
-    </div>
+    <div class="w3-third"><img src="bw002/spread2.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw002/spread3.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw002/spread4.jpg" style="width:100%"></div>
   </div>
-  <div class="w3-row" id="warp001">
-    <div class="w3-half">
-      <img src="bw001/spread1.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw001/spread2.jpg" style="width:100%">
-    </div>
+
+  <div class="w3-row" id="warp004">
+    <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 1 </span>
+    <a href="bw001/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
   </div>
   <div class="w3-row">	
-    <div class="w3-half">
-      <img src="bw001/spread3.jpg" style="width:100%">
-    </div>
-    <div class="w3-half">
-      <img src="bw001/spread4.jpg" style="width:100%">
-    </div>
+    <div class="w3-third"><img src="bw001/spread2.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw001/spread3.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw001/spread4.jpg" style="width:100%"></div>
   </div>
+
   
 <!-- End Page Content -->
 </div>
