--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <div class="w3-row"><a href="#" class="w3-left w3-button w3-white">BREADWARP ZINE ARCHIVE</a></div>
+    <div class="w3-row"><a href="/" class="w3-left w3-button w3-white">BREADWARP ZINE ARCHIVE</a></div>
+<div class="w3-row">
+<a href="/" class="w3-left w3-button w3-white">MERCH</a>
+<a href="https://www.instagram.com/aykoner/" class="w3-left w3-button w3-white">INSTA</a>
+<a href="https://linktr.ee/ayk0" class="w3-left w3-button w3-white">LINKTREE</a></div>
   </header>
     <div class="w3-row"><span class="w3-left w3-white">jump to ...</span> 
     <a href="#warp001" class="w3-left w3-button w3-white">[1]</a>
@@ -73,7 +77,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 
 <!-- Footer / About Section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
-  <h2><a href="https://linktr.ee/ayk0">linktree</a></h2>
+  <h2>FUCK THE POLICE</h2>
 </footer>
  
 </body>
