--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ body {font-family: "Raleway", Arial, sans-serif}
   <header class="w3-container w3-xlarge w3-padding-24">
     <div class="w3-row"><a href="/" class="w3-left w3-button w3-white">BREADWARP ZINE ARCHIVE</a></div>
 <div class="w3-row">
-<a href="/" class="w3-left w3-button w3-white">MERCH</a>
-<a href="https://www.instagram.com/aykoner/" class="w3-left w3-button w3-white">INSTA</a>
-<a href="https://linktr.ee/ayk0" class="w3-left w3-button w3-white">LINKTREE</a></div>
+<a href="https://aykoner.gumroad.com" target="_blank" class="w3-left w3-button w3-white">MERCH</a>
+<a href="https://www.instagram.com/aykoner/" target="_blank" class="w3-left w3-button w3-white">INSTA</a>
+<a href="https://linktr.ee/ayk0" target="_blank" class="w3-left w3-button w3-white">LINKTREE</a></div>
   </header>
     <div class="w3-row"><span class="w3-left w3-white">jump to ...</span> 
     <a href="#warp001" class="w3-left w3-button w3-white">[1]</a>
