--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@ body {font-family: "Raleway", Arial, sans-serif}
     <a href="#warp001" class="w3-left w3-button w3-white">[1]</a>
     <a href="#warp002" class="w3-left w3-button w3-white">[2]</a>
     <a href="#warp003" class="w3-left w3-button w3-white">[3]</a>
-    <a href="#warp004" class="w3-left w3-button w3-white">[4]</a></div>
+    <a href="#warp004" class="w3-left w3-button w3-white">[4]</a>
+    <a href="#warp005" class="w3-left w3-button w3-white">[5]</a></div>
 
   <!-- Photo Grid -->
+  <div class="w3-row" id="warp005">
+    <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 5 </span>
+    <a href="bw005/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
+  </div>
+  <div class="w3-row">	
+    <div class="w3-third"><img src="bw005/spread2.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw005/spread3.jpg" style="width:100%"></div>
+    <div class="w3-third"><img src="bw005/spread4.jpg" style="width:100%"></div>
+  </div>
+
   <div class="w3-row" id="warp004">
     <span class="w3-left w3-button w3-white" style="font-weight:bold">ISSUE 4 </span>
     <a href="bw004/spread1.jpg" target="_blank"><span class="w3-left w3-button w3-white">[view cover]</span></a>
